feat: Add comprehensive descriptive question types and disable automatic subpart generation for descriptive questions.

--- a/prompts.yaml
+++ b/prompts.yaml
@@ -2406,6 +2406,319 @@ descriptive_questions: |
     | **5. Evaluating Scientific Explanations**             | —                                                                | —                                                                          | Critique or justify a claim/conclusion using evidence and scientific reasoning.                           |
     | **6. Communicating Scientific Ideas**                 | Define, name, or state a key term/concept using correct science terminology. | —                                                              | —                                                                                                         |
 
+  ============================================================
+  DESCRIPTIVE QUESTION TYPES — SCIENCE (WITH SUB-QUESTIONS)
+  ============================================================
+
+
+      1. DESCRIPTIVE (CONTENT / CONCEPT BASED)
+
+      DESCRIPTION
+      A descriptive question that tests core scientific concepts,
+      definitions, mechanisms, or principles through explanation.
+
+      • No image
+      • No real-life narrative
+      • No dataset required
+      • Students rely on conceptual understanding only
+
+      Students must explain:
+      ✓ how something works
+      ✓ why something happens
+      ✓ relationship between concepts
+
+      ANSWER FORMAT
+      • Full sentence explanation required
+      • Scientific terminology expected
+
+      EXAMPLE — CONTENT BASED
+
+      Descriptive Question
+
+      Explain the process of photosynthesis.
+
+      a) Describe how light energy is converted into chemical energy. 
+
+      b) Explain the role of chlorophyll in this process. 
+
+      c) Why is photosynthesis essential for maintaining atmospheric balance? 
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Requires explanation, not definition recall
+      [ ] Tests scientific mechanism or reasoning
+      [ ] No external stimulus required
+      [ ] Sub-questions increase depth of understanding
+
+
+      2. DESCRIPTIVE (REAL-LIFE SCENARIO BASED — SCIENCE)
+
+      DESCRIPTION
+      Students analyze a real-life situation or experiment and
+      explain scientific processes, causes, or outcomes.
+
+      The answer must depend on understanding the scenario.
+
+      SCENARIO RULES
+      • Continuous narrative (realistic situation)
+      • Provides observations or outcomes
+      • Requires interpretation and reasoning
+
+      COGNITIVE LEVEL
+      DOK Level 3 (analysis and application)
+
+
+      EXAMPLE — SCENARIO BASED
+
+      Descriptive Question
+
+      Ravi placed two identical potted plants in different locations.
+      One plant was kept near a sunny window and watered regularly.
+      The other was kept in a dark room and watered the same amount.
+      After two weeks, the plant near the window remained healthy,
+      while the plant in the dark room turned yellow and stopped growing.
+
+      a) Explain why the plant in sunlight remained healthy. 
+
+      b) Why did the plant in the dark room turn yellow? 
+
+      c) Predict what would happen if the dark-room plant is later
+        moved into sunlight. Explain your reasoning. 
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Answer depends on interpreting scenario
+      [ ] Requires cause–effect reasoning
+      [ ] Scenario provides sufficient information
+      [ ] Multiple reasoning-based sub-questions
+
+
+
+      3. DESCRIPTIVE (IMAGE / DIAGRAM BASED)
+
+      DESCRIPTION
+      Students observe a diagram or scientific illustration and
+      provide explanation-based responses.
+
+      The diagram must be necessary to answer.
+
+      Students must:
+      ✓ interpret visual information
+      ✓ explain process or relationship shown
+      ✓ analyze structure or interaction
+
+  
+      EXAMPLE — IMAGE BASED
+
+      Diagram Prompt:
+      A labeled diagram of the human heart showing atria,
+      ventricles, and direction of blood flow.
+
+      Descriptive Question
+
+      Based on the diagram of the human heart:
+
+      a) Explain how blood flows through the heart chambers. 
+
+      b) Why are the walls of the left ventricle thicker than the
+        right ventricle? 
+
+      c) Explain how valves maintain one-way blood flow. 
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Diagram is essential for answering
+      [ ] Questions require interpretation (not labeling)
+      [ ] Visual relationships must be explained
+
+
+
+      4. DESCRIPTIVE (SCIENCE OBSERVATION / EXPERIMENT BASED)
+
+      DESCRIPTION
+      Students analyze experimental setup and explain scientific
+      principles demonstrated by the observation.
+
+      Focus:
+      ✓ experimental reasoning
+      ✓ variable control
+      ✓ scientific inference
+
+
+
+      EXAMPLE — EXPERIMENT BASED
+
+      Descriptive Question
+
+      A student placed a burning candle under a glass jar.
+      After some time, the flame went out.
+
+      a) Explain why the candle flame stopped burning. 
+
+      b) What does this experiment show about the role of oxygen
+        in combustion? 
+
+      c) How would the result change if a larger jar were used?
+        Explain scientifically.
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Based on observable experiment
+      [ ] Requires explanation of scientific principle
+      [ ] Includes inference or prediction
+
+
+
+      5. DESCRIPTIVE (DATA-BASED)
+
+      DESCRIPTION
+      Students analyze data (table, graph, or measurements)
+      and explain patterns, trends, or conclusions.
+
+
+
+      EXAMPLE — DATA BASED
+
+      Temperature vs Solubility of Salt
+
+      Temperature (°C)     Salt Dissolved (g)
+      ----------------------------------------
+      10                   20
+      20                   28
+      30                   38
+      40                   52
+
+      Descriptive Question
+
+      a) Describe the relationship between temperature and solubility. 
+
+      b) Explain why solubility changes with temperature. 
+
+      c) Predict solubility at 50°C and justify scientifically.
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Requires interpreting data
+      [ ] Trend identification needed
+      [ ] Scientific reasoning required
+
+
+
+      6. DESCRIPTIVE (NUMERICAL + VISUAL SCIENCE)
+
+      DESCRIPTION
+      Students interpret visual representation and apply numerical
+      scientific reasoning.
+
+
+
+      EXAMPLE — NUMERICAL + IMAGE
+
+      Diagram Prompt:
+      Three thermometers showing freezing and boiling points
+      on Celsius, Kelvin, and Fahrenheit scales.
+
+      Descriptive Question
+
+      a) Explain why the same temperature has different numerical
+        values on different scales. 
+
+      b) Describe the relationship between Celsius and Kelvin scales. 
+
+      c) Why is Kelvin scale used in scientific measurements? 
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Requires interpreting visual scale
+      [ ] Requires numerical reasoning
+      [ ] Conceptual explanation included
+
+
+
+      7. DESCRIPTIVE (EQUATION / PROCESS BASED)
+
+      DESCRIPTION
+      Students explain meaning, components, or implications of a
+      scientific or chemical equation.
+
+
+
+      EXAMPLE — EQUATION BASED
+
+      Photosynthesis equation:
+
+      6CO₂ + 6H₂O → C₆H₁₂O₆ + 6O₂
+
+      Descriptive Question
+
+      a) Explain what this equation represents. 
+
+      b) Why is light energy necessary for this reaction? 
+
+      c) Explain the importance of oxygen released. 
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Equation understanding required
+      [ ] Explanation of process or components
+      [ ] Scientific significance explained
+
+
+
+      8. DESCRIPTIVE (SCENARIO APPLICATION — REAL LIFE)
+
+      DESCRIPTION
+      Students apply scientific knowledge to solve or interpret
+      a real-life problem or situation.
+
+
+
+      EXAMPLE — APPLICATION BASED
+
+      During summer, people wear light-colored cotton clothes.
+
+      a) Explain why light colors are preferred. 
+
+      b) Why is cotton more comfortable than synthetic fabric
+        in hot weather? 
+
+      c) Explain how sweating helps regulate body temperature. 
+
+
+
+      VALIDATION CHECKLIST
+
+      [ ] Real-life context present
+      [ ] Scientific concept applied
+      [ ] Requires explanation of mechanism
+
+
+
+      MASTER VALIDATION CHECKLIST (ALL DESCRIPTIVE TYPES)
+
+      [ ] Sub-questions require explanation or reasoning
+      [ ] No one-word answers possible
+      [ ] Scientific logic must be demonstrated
+      [ ] Information provided is sufficient
+      [ ] Cognitive level ≥ application
+      [ ] Marks aligned with reasoning depth
+
+
+
   3. DESCRIPTIVE QUESTION DESIGN RULES
 
     Descriptive questions assess deeper understanding through scenario-based, multi-part questions.
@@ -2604,44 +2917,65 @@ descriptive_questions: |
 
       ASSUME:
       - The student has NEVER seen this topic before.
-      - The student does NOT know any technical or scientific terminology.
+      - The student does NOT know any technical or mathematical terminology.
 
       HARD RULES (DO NOT VIOLATE):
-      - Do NOT mention any numbers, symbols, variables, or specific values from the question.
+      - Do NOT mention any numbers, symbols, variables, equations, diagrams, or values from the question.
       - Do NOT use advanced or textbook-style language.
       - Do NOT write in a single flowing paragraph.
+      - Do NOT skip or merge sections.
       - The explanation must work for ANY similar question of this type.
 
       LANGUAGE RULES:
       - Use very simple, school-level English.
       - Prefer short sentences.
       - If a word sounds technical, explain it immediately or avoid it.
+      - Write as if you are teaching a confused student one-on-one.
+
+      --------------------------------------------------
 
       REQUIRED STRUCTURE (WRITE EXACTLY IN THIS ORDER):
 
       KEY IDEA
 
       1. What kind of problems these are  
-      Explain what these questions are asking the student to understand or analyze.
+      Explain in simple words what these questions are generally asking the student to understand or find.
 
       2. Core idea behind these problems  
-      Explain the main scientific concept from the beginning.
+      Explain the main idea from the beginning, as if the student has zero background knowledge.
 
       3. Why this idea works  
-      Explain logically why this scientific principle makes sense.
-
+      Explain logically why this method makes sense in real understanding, not just as a rule to memorize.
+ 
       4. General step-by-step method  
+      Write this as clearly numbered steps:
       Step 1:  
       Step 2:  
       Step 3:  
+      Step 4:  
+
+      Each step must describe ONE clear action the student should take.
 
       5. Common mistakes students make  
       Mention at least two common mistakes and explain why students make them.
 
       6. Tips to avoid these mistakes  
-      Give simple, practical tips.
-      
-      **- Do NOT explicitly break the explanation into section headers.**
+      Give simple, practical tips written directly for a student.
+      **- Do NOT explicitly break the explanation into “What kind of problems”, “Core idea”,"Common mistakes students make  " or “Why this works”.
+      Do NOT restate or refer to the given question (Why this idea works .. etc ). **
+
+      The KEY IDEA must not present prompts followed by answers.
+        It should not restate guiding questions such as “what kind of problems these are” or “tips to avoid mistakes.”
+        Instead, it should contain only the explanation itself, written as continuous teaching content that naturally includes all those ideas.
+
+      QUALITY CHECK (MANDATORY):
+      - Minimum length: 6–8 full sentences.
+      - The explanation must be reusable for any similar problem.
+      - If the explanation sounds suitable for a strong student, rewrite it to be simpler.
+
+    - Do not mix answer types within a single blank.
+    - Ensure every blank tests understanding, not guessing.
+    - Output language must be English
 
   ## OUTPUT FORMAT RULE (SCIENCE)
 
